--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
   "devDependencies": {
     "gh-pages": "^6.2.0"
   },
-  "homepage": "https://WinuWijegunawardhana98.github.io/Portfolio"
+  "homepage": "/"
 }
